plugins {
    id "org.sonarqube" version "5.1.0.4882"
    id 'org.cadixdev.licenser' version '0.6.1'
}

// Apply the java plugin to add support for Java
apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    checkstyleConfig
}

// Apply the checkstyle plugin
apply plugin: 'checkstyle'
checkstyle {
    toolVersion = '10.3.4'
    config = resources.text.fromArchiveEntry(configurations.checkstyleConfig, 'google_checks.xml')
    maxErrors = 0
    maxWarnings = 0
}


// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

// In this section you declare the dependencies for your production and test code
dependencies {
    // The production code uses the SLF4J logging API at compile time
    implementation 'org.slf4j:slf4j-api:2.0.5'

    // Declare the dependency for your favourite test framework you want to use in your tests.
    // TestNG is also supported by the Gradle Test task. Just change the
    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
    // 'test.useTestNG()' to your build script.
    testImplementation 'org.hamcrest:hamcrest-library:1.3'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'

    checkstyleConfig dependencies.create("com.puppycrawl.tools:checkstyle:${checkstyle.toolVersion}") {
        transitive = false
    }
}

test {
    useJUnitPlatform()
}

license {
    skipExistingHeaders = true
    include '**/*.java'
}

sonar {
  properties {
    property "sonar.projectKey", "30sec-of-java"
    property "sonar.projectName", "30sec-of-java"
  }
}